              bytes to be a multiple of sizeof(long).
            - The function makeInfinite() is no longer available for Integer
              (which does not support the value infinity).
            - The division operators / and /= now throw an exception in the
              class Integer when dividing by zero (but not in LargeInteger,
              since that class supports infinity).
        Class IntegerOverflow:
            - New exception class.
        Class Isomorphism<dim>:
            - The increment operators are now available in all dimensions
              (not just dimensions ≤ 6).
        Class IsoSigEncodingAPI, IsoSigTypeAPI:
            - New documentation-only classes that explain how encodings and
              signature types for isomorphism signatures are expected to behave.
        Struct IsReginaArbitraryPrecisionInteger<T>, IsReginaInteger<T>:
            - Now deprecated, in favour of the new concepts
              ArbitraryPrecisionInteger<T> and ReginaInteger<T>.
        Class LargeInteger:
            - See the changes listed under the sister class Integer above.
        Class Laurent<T>:
            - For the iterator-based constructor and init() routine, the
              iterator type is now required to be random access.
        Class LPCol<...>:
            - This is now an internal class in the namespace regina::detail,
              and its template parameters have changed.  End users should have
              no need to refer to LPCol<...> at all.
        Class LPConstraint...:
            - All linear programming constraint classes must now adhere to the
              new concept LPConstraint.
            - The constant nConstraints and the routine constrain() are both
              removed, and replaced with the class constant array constraints[].
            - The arguments to addRows() have changed: it no longer takes an
              initial tableaux, but instead takes the relevant triangulation